Bug 366764 - Unsupported Full Screen Mode (on Wayland)
Summary: Unsupported Full Screen Mode (on Wayland)
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: git master
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 368547 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-08-14 20:32 UTC by Matthias Fauconneau
Modified: 2016-09-14 09:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
attachment-19062-0.html (1.91 KB, text/html)
2016-08-15 13:27 UTC, Matthias Fauconneau
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Matthias Fauconneau 2016-08-14 20:32:37 UTC
Full screen mode (e.g. in Gwenview) does not work.
I am not sure whether Gwenview fails to request, or KWin fails to reconfigure.

Reproducible: Always
Comment 1 Martin Flöser 2016-08-15 05:47:40 UTC
I doubt it's a KWin bug - KWin actually handles fullscreen correctly. The failure at least is consistent, I was able to reproduce with both Gwenview and KDevelop. Given https://bugreports.qt.io/browse/QTBUG-54883 I'm tempted to blame Qt, but I'll investigate more.
Comment 2 Matthias Fauconneau 2016-08-15 13:27:28 UTC
Created attachment 100605 [details]
attachment-19062-0.html

I noticed the window goes below the shell panel.
When focusing away and in again, the panel is correctly hidden below the
window.
In this state, switching between windowed and fullscreen works correctly
with regard to the panel.
The issue with the decoration still remains in all cases.

On Mon, Aug 15, 2016 at 7:47 AM, Martin Gräßlin via KDE Bugzilla <
bugzilla_noreply@kde.org> wrote:

> https://bugs.kde.org/show_bug.cgi?id=366764
>
> Martin Gräßlin <mgraesslin@kde.org> changed:
>
>            What    |Removed                     |Added
> ------------------------------------------------------------
> ----------------
>              Status|UNCONFIRMED                 |CONFIRMED
>      Ever confirmed|0                           |1
>
> --- Comment #1 from Martin Gräßlin <mgraesslin@kde.org> ---
> I doubt it's a KWin bug - KWin actually handles fullscreen correctly. The
> failure at least is consistent, I was able to reproduce with both Gwenview
> and
> KDevelop. Given https://bugreports.qt.io/browse/QTBUG-54883 I'm tempted to
> blame Qt, but I'll investigate more.
>
> --
> You are receiving this mail because:
> You reported the bug.
Comment 3 Martin Flöser 2016-09-12 07:19:40 UTC
*** Bug 368547 has been marked as a duplicate of this bug. ***
Comment 4 Martin Flöser 2016-09-12 12:15:57 UTC
Git commit 405702b1a2b4c38ce77f7698059f5ea115fa2185 by Martin Gräßlin.
Committed on 12/09/2016 at 12:14.
Pushed by graesslin into branch 'master'.

[autotest/integration] Extend TestShellClient::testFullscreen with deco

In addition to normal client to fullscreen two more cases are added
which also go from a server side decorated window to fullscreen.
This highlights an issue that an incorrect geometry is requested.

M  +25   -5    autotests/integration/shell_client_test.cpp

http://commits.kde.org/kwin/405702b1a2b4c38ce77f7698059f5ea115fa2185
Comment 5 Martin Flöser 2016-09-14 09:02:52 UTC
Git commit ded90756fbb7f28e6200c85c0d71032dd58823fd by Martin Gräßlin.
Committed on 14/09/2016 at 08:53.
Pushed by graesslin into branch 'master'.

Fix interaction between decoration and fullscreen ShellClient

Summary:
A fullscreen ShellClient still had a decoration which was caused by
a combination of several bugs:
* when going to/from fullscreen the decoration was not update
* noBorder did not return true for a fullscreen window
* wl_shell emits fullscreen changed and maximized changed

Comparing to X11 Client both is done. So ShellClient needs to do the
same. This ensures that the correct geometry is requested when going
to fullscreen.

Reviewers: #kwin, #plasma_on_wayland, bshah

Subscribers: plasma-devel, kwin

Tags: #plasma_on_wayland, #kwin

Differential Revision: https://phabricator.kde.org/D2751

M  +121  -4    autotests/integration/shell_client_test.cpp
M  +7    -1    shell_client.cpp

http://commits.kde.org/kwin/ded90756fbb7f28e6200c85c0d71032dd58823fd